refactor AstProjectStageSpecification to align with existing pattern